added a container for responsive

--- a/index.html
+++ b/index.html
@@ -83,158 +83,159 @@
     <h2 class="display-3 mt-1 fw-bold text-primary d-flex justify-content-center" id="Works">Works</h2>
   </div>
   
-  <div class="card-group">
-        <div class="col mx-3 my-5" style="height: 500px;">
-          <p class="fw-bold fs-2 display-2 lh-1">Tribute Page</p>
-          <div class=" card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/card1.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
-              <ul class="d-flex list-unstyled mt-auto">
-                <li class="me-auto">
-                  <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-                </li>
-                <li class="d-flex align-items-center me-2 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
-                    <small>GitHub</small>
-                  </a>
-                </li>
-                <li class="d-flex align-items-center me-3 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
-                    <small>Demo</small>
-                  </a>
-                </li>
-              </ul>
+    <div class="container">
+      <div class="card-group">
+            <div class="col mx-3 my-5" style="height: 500px;">
+              <p class="fw-bold fs-2 display-2 lh-1">Tribute Page</p>
+              <div class=" card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/card1.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="me-auto">
+                      <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                    </li>
+                    <li class="d-flex align-items-center me-2 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
+                        <small>GitHub</small>
+                      </a>
+                    </li>
+                    <li class="d-flex align-items-center me-3 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
+                        <small>Demo</small>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
 
-        <div class="col mx-3 my-5" style="height: 500px;">
-          <p class="fw-bold fs-2 display-2 lh-1">Portfolio Vanilla</p>
-          <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/card4.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
-              <ul class="d-flex list-unstyled mt-auto">
-                <li class="me-auto">
-                  <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-                </li>
-                <li class="d-flex align-items-center me-2 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
-                    <small>GitHub</small>
-                  </a>
-                </li>
-                <li class="d-flex align-items-center me-3 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
-                    <small>Demo</small>
-                  </a>
-                </li>
-              </ul>
+            <div class="col mx-3 my-5" style="height: 500px;">
+              <p class="fw-bold fs-2 display-2 lh-1">Portfolio Vanilla</p>
+              <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/card4.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="me-auto">
+                      <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                    </li>
+                    <li class="d-flex align-items-center me-2 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
+                        <small>GitHub</small>
+                      </a>
+                    </li>
+                    <li class="d-flex align-items-center me-3 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
+                        <small>Demo</small>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
 
-        <div class="col mx-3 my-5" style="height: 500px;">
-          <p class="fw-bold fs-2 display-2 lh-1">jd-Informatica</p>
-          <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/card6.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
-              <ul class="d-flex list-unstyled mt-auto">
-                <li class="me-auto">
-                  <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-                </li>
-                <li class="d-flex align-items-center me-2 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
-                    <small>GitHub</small>
-                  </a>
-                </li>
-                <li class="d-flex align-items-center me-3 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
-                    <small>Demo</small>
-                  </a>
-                </li>
-              </ul>
+            <div class="col mx-3 my-5" style="height: 500px;">
+              <p class="fw-bold fs-2 display-2 lh-1">jd-Informatica</p>
+              <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/card6.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="me-auto">
+                      <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                    </li>
+                    <li class="d-flex align-items-center me-2 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
+                        <small>GitHub</small>
+                      </a>
+                    </li>
+                    <li class="d-flex align-items-center me-3 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
+                        <small>Demo</small>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
 
-        <div class="col mx-3 my-5" style="height: 500px;">
-          <p class="fw-bold fs-2 display-2 lh-1">Password Generator</p>
-          <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg my-4" style="background-image: url('img/card8.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
-              <ul class="d-flex list-unstyled mt-auto">
-                <li class="me-auto">
-                  <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-                </li>
-                <li class="d-flex align-items-center me-2 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
-                    <small>GitHub</small>
-                  </a>
-                </li>
-                <li class="d-flex align-items-center me-3 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
-                    <small>Demo</small>
-                  </a>
-                </li>
-              </ul>
+            <div class="col mx-3 my-5" style="height: 500px;">
+              <p class="fw-bold fs-2 display-2 lh-1">Password Generator</p>
+              <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg my-4" style="background-image: url('img/card8.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="me-auto">
+                      <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                    </li>
+                    <li class="d-flex align-items-center me-2 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
+                        <small>GitHub</small>
+                      </a>
+                    </li>
+                    <li class="d-flex align-items-center me-3 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
+                        <small>Demo</small>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-  
-        <div class="col mx-3 my-5" style="height: 500px;">
-          <p class="fw-bold fs-2 display-2 lh-1">Notepad</p>
-          <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg my-4" style="background-image: url('img/notepad.png'); background-size: cover; background-repeat: no-repeat;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
-              <ul class="d-flex list-unstyled mt-auto">
-                <li class="me-auto">
-                  <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-                </li>
-                <li class="d-flex align-items-center me-2 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/python/blob/main/GUI%20Scripts/NotePad.pyw">
-                    <small>GitHub</small>
-                  </a>
-                </li>
-                <li class="d-flex align-items-center me-3 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="#">
-                    <small>Demo</small>
-                  </a>
-                </li>
-              </ul>
+      
+            <div class="col mx-3 my-5" style="height: 500px;">
+              <p class="fw-bold fs-2 display-2 lh-1">Notepad</p>
+              <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg my-4" style="background-image: url('img/notepad.png'); background-size: cover; background-repeat: no-repeat;">
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="me-auto">
+                      <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                    </li>
+                    <li class="d-flex align-items-center me-2 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/python/blob/main/GUI%20Scripts/NotePad.pyw">
+                        <small>GitHub</small>
+                      </a>
+                    </li>
+                    <li class="d-flex align-items-center me-3 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="#">
+                        <small>Demo</small>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-  
-        <div class="col mx-3 my-5" style="height: 500px;">
-          <p class="fw-bold fs-2 display-2 lh-1">Calculator Javascript</p>
-          <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-dark bg-dark rounded-5 shadow-lg my-4" style="background-image: url('img/calculadora.png'); background-position: center; background-repeat: no-repeat; background-size: cover;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-              <ul class="d-flex list-unstyled mt-auto">
-                <li class="me-auto">
-                  <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-                </li>
-                <li class="d-flex align-items-center me-3 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/javascript/tree/main/Calculadora%20js">
-                    <small>GitHub</small>
-                  </a>
-                </li>
-                <li class="d-flex align-items-center me-3 fs-3">
-                  <svg class="bi me-2" width="1em" height="1em"></svg>
-                  <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/javascript/Calculadora%20js/">
-                    <small>Demo</small>
-                  </a>
-                </li>
-              </ul>
+      
+            <div class="col mx-3 my-5" style="height: 500px;">
+              <p class="fw-bold fs-2 display-2 lh-1">Calculator Javascript</p>
+              <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-dark bg-dark rounded-5 shadow-lg my-4" style="background-image: url('img/calculadora.png'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="me-auto">
+                      <img src="https://avatars.githubusercontent.com/u/68082746?v=4" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                    </li>
+                    <li class="d-flex align-items-center me-3 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/javascript/tree/main/Calculadora%20js">
+                        <small>GitHub</small>
+                      </a>
+                    </li>
+                    <li class="d-flex align-items-center me-3 fs-3">
+                      <svg class="bi me-2" width="1em" height="1em"></svg>
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/javascript/Calculadora%20js/">
+                        <small>Demo</small>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-          </div>
         </div>
-    </div>
-
+      </div>
 
     <!-- Section Contact -->
 
