--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
             <div class="col mx-3 my-5" style="height: 500px;">
               <p class="fw-bold fs-2 display-2 lh-1">Password Generator</p>
-              <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg my-4" style="background-image: url('img/card8.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
+              <div class="card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/card8.png'); background-position: center; background-size: cover; background-repeat: no-repeat;">
                 <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
                   <ul class="d-flex list-unstyled mt-auto">
                     <li class="me-auto">
@@ -170,13 +170,13 @@
                     </li>
                     <li class="d-flex align-items-center me-2 fs-3">
                       <svg class="bi me-2" width="1em" height="1em"></svg>
-                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/python/blob/main/GUI%20Scripts/PasswordGenerator.pyw">
                         <small>GitHub</small>
                       </a>
                     </li>
                     <li class="d-flex align-items-center me-3 fs-3">
                       <svg class="bi me-2" width="1em" height="1em"></svg>
-                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="#">
                         <small>Demo</small>
                       </a>
                     </li>
