fixed some links

--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
                     </li>
                     <li class="d-flex align-items-center me-2 fs-3">
                       <svg class="bi me-2" width="1em" height="1em"></svg>
-                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/Portfolio">
                         <small>GitHub</small>
                       </a>
                     </li>
                     <li class="d-flex align-items-center me-3 fs-3">
                       <svg class="bi me-2" width="1em" height="1em"></svg>
-                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/Portfolio/">
                         <small>Demo</small>
                       </a>
                     </li>
@@ -145,13 +145,13 @@
                     </li>
                     <li class="d-flex align-items-center me-2 fs-3">
                       <svg class="bi me-2" width="1em" height="1em"></svg>
-                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/FreeCodeCamp/TributePage">
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://github.com/jd-apprentice/html-css/tree/main/jd-Informatica">
                         <small>GitHub</small>
                       </a>
                     </li>
                     <li class="d-flex align-items-center me-3 fs-3">
                       <svg class="bi me-2" width="1em" height="1em"></svg>
-                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/FreeCodeCamp/TributePage">
+                      <a class="text-decoration-none badge bg-dark" target="_blank" href="https://jd-apprentice.github.io/html-css/jd-Informatica/">
                         <small>Demo</small>
                       </a>
                     </li>
