added some meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     
     <meta charset="utf-8">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/780523152059924552/858039344057024562/JGMD_Negro_NO_BG.png"/>
+    <meta property="og:description" content="Hi! I'm a Front-End Developer, learning is something that I adore and I do it in various fields; I look forward to acquiring a place to give, all my experience and wishes to progress."/>
+    <meta property="og:title" content="jd-apprentice - Web Developer"/>
+    <meta property="og:url"content="https://jd-apprentice.github.io/Portfolio/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
