some changes to the footer

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 <!-- Section Footer -->
   <section class="FOOTER">
     <footer>
-      <p id="footer-text">Portofolio hecho con <a href="https://getbootstrap.com/" class="text-primary">Bootstrap</a>, por <a href="https://twitter.com/jd_apprentice" class="text-primary">@jd-apprentice</a>.</p>
+      <p id="footer-text">&copy; Vectores sacados de <a href="https://worldvectorlogo.com/" class="text-primary">worldvectorlogo</a></p>
     </footer>
   </section>
 <!-- Scripts -->
