--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
           </div>
         </div>
 
-        <div class="portfolio col mx-3 my-5">
+        <div class="Pure-Gold col mx-3 my-5">
           <p class="fw-bold fs-2 display-2 lh-1">Pure-Gold</p>
           <div
-            class="portfolio-card card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
+            class="Pure-Gold-Card card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
@@ -208,10 +208,10 @@
           </div>
         </div>
 
-        <div class="Pure-Gold col mx-3 my-5">
+        <div class="portfolio col mx-3 my-5">
           <p class="fw-bold fs-2 display-2 lh-1">Portfolio Vanilla</p>
           <div
-            class="Pure-Gold-Card card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-white rounded-5 shadow-lg">
+            class="portfolio-card card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-white rounded-5 shadow-lg">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
