changed one proyect

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </div>
 
         <div class="portfolio col mx-3 my-5">
-          <p class="fw-bold fs-2 display-2 lh-1">Portfolio Vanilla</p>
+          <p class="fw-bold fs-2 display-2 lh-1">Portfolio</p>
           <div
             class="portfolio-card card border-primary mb-3 card card-cover h-100 overflow-hidden text-white bg-white rounded-5 shadow-lg">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-dark text-shadow-1">
@@ -221,14 +221,14 @@
                 <li class="d-flex align-items-center me-2 fs-3">
                   <svg class="bi me-2" width="1em" height="1em"></svg>
                   <a class="text-decoration-none badge bg-info" target="_blank"
-                    href="https://github.com/jd-apprentice/html-css/tree/main/Portfolio">
+                    href="https://github.com/jd-apprentice/Portfolio">
                     <small>GitHub</small>
                   </a>
                 </li>
                 <li class="d-flex align-items-center me-3 fs-3">
                   <svg class="bi me-2" width="1em" height="1em"></svg>
                   <a class="text-decoration-none badge bg-info" target="_blank"
-                    href="https://jd-apprentice.github.io/html-css/Portfolio/">
+                    href="https://jd-apprentice.github.io/Portfolio/">
                     <small>Demo</small>
                   </a>
                 </li>
