cambio de proyecto

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" type="image/jpg"
-    href="https://cdn.discordapp.com/attachments/780523152059924552/858039344057024562/JGMD_Negro_NO_BG.png" />
+  <link rel="shortcut icon" type="image/jpg">
   <link rel="stylesheet" href="css/style.css">
 
   <title>jd-apprentice portfolio</title>
@@ -63,8 +62,8 @@
       <div class="py-5">
         <h1 data-text="Jonathan Dyallo" class="display-3 fw-bold mt-3 text-secondary">Jonathan Dyallo</h1>
         <div id="inicio" class="col-lg-10 mx-auto">
-          <p id="presentacion-es" class="fs-5 mb-4 mx-3 text-info fw-bolder textoinicio">Soy Jonathan me considero una
-            persona autodidacta; actualmente empecé a tomarme el tiempo de especializarme en varios ámbitos de la
+          <p id="presentacion-es" class="fs-5 mb-4 mx-3 text-info fw-bolder textoinicio">
+            Hola! soy un programador autodidacta, actualmente empecé a tomarme el tiempo de especializarme en varios ámbitos de la
             programación. Como corto plazo tengo interés en el desarrollo web front end y como largo plazo me
             interesaría aprender machine learning e inteligencia artificial, también tengo amplio conocimiento en
             software y hardware para hacer de soporte técnico o atención al cliente en tiendas relacionadas. Aprender es
@@ -267,7 +266,7 @@
         </div>
 
         <div class="calculadora-JS col mx-3 my-5">
-          <p class="fw-bold fs-2 display-2 lh-1">Calculator Javascript</p>
+          <p class="fw-bold fs-2 display-2 lh-1">Buscador de cryptomonedas</p>
           <div
             class="calculadora-JS-card card border-primary mb-3 card card-cover h-100 overflow-hidden text-dark bg-white rounded-5 shadow-lg my-4">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
@@ -279,14 +278,14 @@
                 <li class="d-flex align-items-center me-3 fs-3">
                   <svg class="bi me-2" width="1em" height="1em"></svg>
                   <a class="text-decoration-none badge bg-info" target="_blank"
-                    href="https://github.com/jd-apprentice/javascript/tree/main/Calculadora%20js">
+                    href="https://github.com/jd-apprentice/BuscadorCrypto">
                     <small>GitHub</small>
                   </a>
                 </li>
                 <li class="d-flex align-items-center me-3 fs-3">
                   <svg class="bi me-2" width="1em" height="1em"></svg>
                   <a class="text-decoration-none badge bg-info" target="_blank"
-                    href="https://jd-apprentice.github.io/javascript/Calculadora%20js/">
+                    href="#!">
                     <small>Demo</small>
                   </a>
                 </li>
